tests/specs/ecosystem/std/testing/0_205_0.test
std/testing/0.205.0
-- deno.lock --
{
  "version": "3",
  "packages": {
    "specifiers": {
      "jsr:@std/assert@^0.205.0": "jsr:@std/assert@0.205.0",
      "jsr:@std/async@^0.205.0": "jsr:@std/async@0.205.0",
      "jsr:@std/fmt@^0.205.0": "jsr:@std/fmt@0.205.0"
    },
    "jsr": {
      "@std/assert@0.205.0": {
        "integrity": "db64362107e8c63a29dcd5598bbb74f3d2114239e0c37bf888e85e799fa5b3a0",
        "dependencies": [
          "jsr:@std/fmt@^0.205.0"
        ]
      },
      "@std/async@0.205.0": {
        "integrity": "6b90892a9a0e57da27fb342516855135f21103f706ac4eb33e09394858f55255"
      },
      "@std/fmt@0.205.0": {
        "integrity": "1ab985eb90ec4a447676f32e9fccd50ec38cb38983d9e4d006742cff380d6c9e"
      }
    }
  },
  "remote": {}
}

===

== FAST CHECK EMIT FAILED ==
error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /bdd.ts:497:11
    | 
497 | it.only = function itOnly<T>(...args: ItArgs<T>) {
    |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
498 |   const options = itDefinition(...args);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
499 |   return it({
    | ^^^^^^^^^^^^^
500 |     ...options,
    | ^^^^^^^^^^^^^^^
501 |     only: true,
    | ^^^^^^^^^^^^^^^
502 |   });
    | ^^^^^
503 | };
    | ^ this function is missing an explicit return type
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /bdd.ts:505:13
    | 
505 | it.ignore = function itIgnore<T>(...args: ItArgs<T>) {
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
506 |   const options = itDefinition(...args);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
507 |   return it({
    | ^^^^^^^^^^^^^
508 |     ...options,
    | ^^^^^^^^^^^^^^^
509 |     ignore: true,
    | ^^^^^^^^^^^^^^^^^
510 |   });
    | ^^^^^
511 | };
    | ^ this function is missing an explicit return type
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


